--- a/MystiqueMC/Views/CatConceptosGastos/Create.cshtml
+++ b/MystiqueMC/Views/CatConceptosGastos/Create.cshtml
@@ -52,13 +52,17 @@
 
                                     <div class="col-md-4">
                                         @Html.Label("Descripción", htmlAttributes: new { @class = "control-label" })
-                                        @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control",
+                                        @Html.EditorFor(model => model.descripcion, new
+                                        {
+                                            htmlAttributes = new
+                                            {
+                                                @class = "form-control",
                                         data_parsley_maxlength = "300",
                                         data_parsley_required = "true",
                                         data_inputmask_regex = "[a-zA-ZñÑáéíóúÁÉÍÓÚ. ]{0,300}",
                                         maxlength = "300",
                                         data_parsley_errors_container = "#descripcion-error"
-                                        } })
+                                        })
                                         @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger parsley-required" })
                                         <div class="row">
                                             <span style="color:red" for="descripcion" id="descripcion-error"></span>
@@ -75,16 +79,16 @@
                                 </div>
                             </div>
 
-                                <div class="form-group">
-                                    <div class="col-md-12">
-                                        <div class="col-md-4">
-                                            <input type="submit" value="Agregar" class="btn btn-primary" />
-                                            @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-white" })
-                                        </div>
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <div class="col-md-4">
+                                        <input type="submit" value="Agregar" class="btn btn-primary" />
+                                        @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-white" })
                                     </div>
                                 </div>
+                            </div>
 
-                            
+
 
                         </div>
                     }
